# dungen

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  SConstruct  dungen_editor_icon.svg.import  register_types.cpp  register_types.h
core/: dungen.cpp  dungen.h  dungen_config.cpp  dungen_config.h  dungen_path_builder.cpp  dungen_path_builder.h  dungen_room.cpp  dungen_room.h  dungen_room_generator.cpp  dungen_room_generator.h  enums.h  triangulate.cpp  triangulate.h
demo/: .gitignore  another_example.tres  dungen_renderer.gd  dungen_tilemap_example.tscn  example.tres  example_dungen_config.tres  floor_tile.png.import  icon.svg.import  jank.tres  libdungen.gdextension  more_examples.tres  project.godot  tile.png.import
demo/.godot/: extension_list.cfg
demo/.godot/editor/: create_recent.Resource  editor_layout.cfg  filesystem_cache8  project_metadata.cfg
editor/: dungen_editor.cpp  dungen_editor.h  dungen_editor_macros.h  dungen_editor_plugin.cpp  dungen_editor_plugin.h  dungen_editor_toolbar.cpp  dungen_editor_toolbar.h  dungen_preview_panel.cpp  dungen_preview_panel.h  dungen_previewer.cpp  dungen_previewer.h
editor/components/: dungen_editor_toolbar.cpp  dungen_zoom_widget.cpp  dungen_zoom_widget.h
gdextension/: libdungen.gdextension
